# my-6-games

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  justfile
admin/: Cargo.toml  Dockerfile  config.toml.example
admin/src/: cache.rs  config.rs  db.rs  error.rs  main.rs  middleware.rs  oidc.rs  session.rs  state.rs
admin/src/routes/: auth.rs  dashboard.rs  health.rs  mod.rs  shares.rs
admin/templates/: base.html.tera  dashboard.html.tera  login.html.tera
admin/templates/shares/: detail.html.tera  list.html.tera
backend/: Cargo.toml  Dockerfile  Rocket.toml
backend/src/: cache.rs  config.rs  db.rs  main.rs
backend/src/models/: game.rs  mod.rs  share.rs
backend/src/routes/: errors.rs  games.rs  health.rs  mod.rs  pages.rs  shares.rs
backend/src/services/: igdb.rs  image.rs  mod.rs  rate_limit.rs
backend/templates/: base.html.tera  error.html.tera  index.html.tera  share.html.tera
caddy/: Caddyfile  Caddyfile.prod
migrations/: 001_initial.sql
